<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layerType="hardware"
    app:key="setting_layout_key">

    <PreferenceCategory app:title="@string/dlg_conn_title"
        app:isPreferenceVisible="true">

        <EditTextPreference
            android:defaultValue="@string/dlg_conn_ip_default"
            android:key="settings_layout_connect_ip"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/dlg_conn_ip"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="@string/dlg_conn_port_default"
            app:entries="@array/settings_connect_port"
            app:entryValues="@array/settings_connect_port"
            app:key="settings_layout_connect_port"
            app:title="@string/dlg_conn_port"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue="@string/dlg_conn_database_default"
            android:key="settings_layout_connect_database"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/dlg_conn_database"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue="@string/dlg_conn_user_default"
            android:key="settings_layout_connect_user"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/dlg_conn_user"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:key="settings_layout_connect_password"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/dlg_conn_password"
            app:useSimpleSummaryProvider="false" />


    </PreferenceCategory>
</PreferenceScreen>
