<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/design_default_color_secondary_variant"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/conn_dlg_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/dlg_conn_title"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/dlg_conn_ip"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/dlg_conn_edit_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/dlg_conn_ip_default"
        android:background="@color/white"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/dlg_conn_port"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/dlg_conn_edit_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/dlg_conn_port_default"
        android:background="@color/white"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/dlg_conn_database"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/dlg_conn_edit_database"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:text="@string/dlg_conn_database_default"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/dlg_conn_user"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/dlg_conn_edit_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:text="@string/dlg_conn_user_default"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/dlg_conn_password"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/dlg_conn_edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:inputType="textPassword"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/dlg_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_margin="5dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/dlg_comfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comfirm"
            android:layout_margin="5dp"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>